polish: add responsive footer in mobile-sidebar

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
         <ul>
           <li><a href="https://pingcap.com/docs/overview/#tidb-introduction">TiDB</a></li>
           <li><a href="https://pingcap.com/docs/tispark/tispark-user-guide/">TiSpark</a></li>
-          <li><a href="https://github.com/pingcap/docs/blob/master/ROADMAP.md">Roadmap</a></li>
+          <li><a href="https://github.com/pingcap/docs/blob/master/ROADMAP.md" target="_blank">Roadmap</a></li>
         </ul>
       </div>
       <div class="flex-list">
@@ -24,8 +24,8 @@
         <h4 class="list-title"><strong>Resources</strong></h4>
         <ul>
           <li><a href="https://pingcap.com/blog/">Blog</a></li>
-          <li><a href="https://github.com/pingcap">GitHub</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dijsN0bddck">Tech Talks</a></li>
+          <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">Tech Talks</a></li>
         </ul>
       </div>
       <div class="flex-list">
@@ -42,17 +42,17 @@
       <div class="flex-list">
         <h4 class="list-title"><strong>Contact</strong></h4>
         <ul>
-          <li><a href="https://twitter.com/PingCAP">Twitter</a></li>
-          <li><a href="https://www.reddit.com/r/TiDB/">Reddit</a></li>
-          <li><a href="https://groups.google.com/forum/#!forum/tidb-user">Google Group</a></li>
-          <li><a href="https://stackoverflow.com/questions/tagged/tidb">Stack Overflow</a></li>
+          <li><a href="https://twitter.com/PingCAP" target="_blank">Twitter</a></li>
+          <li><a href="https://www.reddit.com/r/TiDB/" target="_blank">Reddit</a></li>
+          <li><a href="https://groups.google.com/forum/#!forum/tidb-user" target="_blank">Google Group</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/tidb" target="_blank">Stack Overflow</a></li>
         </ul>
       </div>
       <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
     </div>
   </div>
   <div class="container">
-    <span class="copyright">&copy; 2017 PingCAP. All Rights Reserved.</span>
+    <p class="copyright">&copy; 2017 PingCAP. All Rights Reserved.</p>
     <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">中文</a>
   </div>
 </section>
