--- a/layouts/partials/mailchimp-js.html
+++ b/layouts/partials/mailchimp-js.html
@@ -3,7 +3,7 @@
     #mc_embed_signup .response {
         margin-top: 12px;
         line-height: 1.4;
-        font-size: 14px;
+        font-size: 0.65rem;
     }
 </style>
 <div id="mc_embed_signup">
