--- a/src/less/header.less
+++ b/src/less/header.less
@@ -184,77 +184,101 @@ nav.mobile-sidebar {
       a {
         display: block;
         width: 100%;
-        padding: 0.4rem 0.75rem;
+        padding: 0.3rem 0.75rem;
         font-size: 16px;
       }
     }
   }
 
   // TODO: footer responsive layout
-  .social {
-    display: flex;
-    margin: 4px 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.155);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.155);
-
-    li {
-      display: inline-block;
-      position: relative;
-      width: (100% / 4);
-      height: 28px;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      line-height: 28px;
-      flex-direction: row;
-      border-right: 1px solid rgba(0, 0, 0, 0.175);
-
-      &:last-child {
-        border-right: 0;
+  .nav-footer {
+    position: absolute;
+    bottom: 0;
+    .contact-list-wrap {
+      .flex-list {
+        padding: 0 0.75rem;
       }
 
-      a {
-        display: block;
-        color: #5c5c5c;
-        font-size: 15px;
-        padding: 2px;
-        text-decoration: none;
+      .social {
+        display: flex;
+        margin: 0.75rem 0;
+        border-top: 1px solid rgba(0, 0, 0, 0.155);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.155);
 
-        &.twitter {
-          &:hover {
-            color: #00baf0;
+        li {
+          display: inline-block;
+          position: relative;
+          width: (100% / 4);
+          height: 24px;
+          margin: 0;
+          padding: 0;
+          text-align: center;
+          line-height: 24px;
+          flex-direction: row;
+          border-right: 1px solid rgba(0, 0, 0, 0.175);
+
+          &:last-child {
+            border-right: 0;
+          }
+
+          a {
+            display: block;
+            color: #fff;
+            font-size: 15px;
+            padding: 2px;
+            text-decoration: none;
+
+            svg {
+              fill: #fff;
+            }
+
+            &.twitter {
+              &:hover svg {
+                fill: #00baf0;
+              }
+            }
+            &.reddit {
+              &:hover {
+                color: #dd0008;
+              }
+            }
+            &.google-plus {
+              &:hover {
+                color: #c43c2c;
+              }
+            }
+            &.stack-overflow {
+              &:hover {
+                color: #f48024;
+              }
+            }
+
+            &.wechat {
+              &:hover {
+                color: #f48024;
+              }
+            }
           }
         }
-        &.facebook {
-          &:hover {
-            color: #3b5997;
-          }
-        }
-        &.google-plus {
-          &:hover {
-            color: #c43c2c;
-          }
-        }
-        &.rss {
-          &:hover {
-            color: #ff6600;
-          }
+      }
+
+      .social-cn {
+        li {
+          width: (100% / 5);
         }
       }
     }
-  }
 
-  .copyright {
-    display: block;
-    color: #5c5c5c;
-    text-align: center;
-    padding: 0.5em 0 1em;
-
-    span {
+    .container {
       display: block;
-      width: 100%;
-      font-size: 11px;
-      margin-bottom: 4px;
+      padding: 1.5rem 0.75rem 0.75rem;
+
+      .copyright {
+        padding: 0;
+      }
+    }
+    #mc_embed_signup .response {
+      padding-left: 0.75rem;
     }
   }
 }
