--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -7,7 +7,7 @@
         <ul>
           <li><a href="https://pingcap.com/docs-cn/overview/#tidb-%e7%ae%80%e4%bb%8b">TiDB</a></li>
           <li><a href="https://pingcap.com/docs-cn/tispark/tispark-user-guide/">TiSpark</a></li>
-          <li><a href="https://github.com/pingcap/docs-cn/blob/master/ROADMAP.md">TiDB 路线图</a></li>
+          <li><a href="https://github.com/pingcap/docs-cn/blob/master/ROADMAP.md" target="_blank">TiDB 路线图</a></li>
         </ul>
       </div>
       <div class="flex-list">
@@ -24,9 +24,9 @@
         <h4 class="list-title"><strong>资源</strong></h4>
         <ul>
           <li><a href="https://pingcap.com/blog-cn/">博客</a></li>
-          <li><a href="https://github.com/pingcap">GitHub</a></li>
-          <li><a href="https://zhuanlan.zhihu.com/newsql">知乎专栏</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dijsN0bddck">技术分享</a></li>
+          <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
+          <li><a href="https://zhuanlan.zhihu.com/newsql" target="_blank">知乎专栏</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">技术分享</a></li>
         </ul>
       </div>
       <div class="flex-list">
@@ -43,10 +43,10 @@
       <div class="flex-list">
         <h4 class="list-title"><strong>联系我们</strong></h4>
         <ul>
-          <li><a href="https://twitter.com/PingCAP">Twitter</a></li>
-          <li><a href="https://www.reddit.com/r/TiDB/">Reddit</a></li>
-          <li><a href="https://groups.google.com/forum/#!forum/tidb-user">Google Group</a></li>
-          <li><a href="https://stackoverflow.com/questions/tagged/tidb">Stack Overflow</a></li>
+          <li><a href="https://twitter.com/PingCAP" target="_blank">Twitter</a></li>
+          <li><a href="https://www.reddit.com/r/TiDB/" target="_blank">Reddit</a></li>
+          <li><a href="https://groups.google.com/forum/#!forum/tidb-user" target="_blank">Google Group</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/tidb" target="_blank">Stack Overflow</a></li>
           <li id="wechat">微信公众号 {{ partial "qr-code.html" . }}</li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
     </div>
   </div>
   <div class="container">
-    <span class="copyright">&copy; 2017 北京平凯星辰科技发展有限公司</span>
+    <p class="copyright">&copy; 2017 北京平凯星辰科技发展有限公司</p>
     <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">English</a>
   </div>
 </section>
