--- a/layouts/partials/mobile-sidebar-cn.html
+++ b/layouts/partials/mobile-sidebar-cn.html
@@ -1,18 +1,11 @@
 {{ $nav_active := $.Scratch.Get "nav_active" }}
-
+{{ $data_i18_link := $.Scratch.Get "data_i18_link" }}
 <!-- nav -->
 <nav class="mobile-sidebar">
   <div class="nav-header">
     <div class="logo-wrap">
       <a class="nav-brand" href="/en"><img src="/images/pingcap-logo.png" alt="PingCAP"></a>
     </div>
-
-    <!-- <div class="global-search">
-      <div class="search-wrapper">
-        <span class="icon-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 18 "height" 18 ) }}</span>
-        {{ partial "search/ui.html" . }}
-      </div>
-    </div> -->
   </div>
   <ul class="ul-base">
     <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs-cn/overview">文档</a></li>
@@ -25,6 +18,24 @@
       </a>
     </li>
   </ul>
-  <!-- TODO: footer -->
+  <div class="nav-footer">
+    <div class="contact-list-wrap">
+      <div class="flex-list">
+        <h4 class="list-title"><strong>Contact</strong></h4>
+        <ul class="social social-cn ul-base">
+          <li><a href="https://twitter.com/PingCAP" class="twitter" target="_blank">{{ partial "svgs/icon-twitter.svg" (dict "width" 20 "height" 20 ) }}</a></li>
+          <li><a href="https://www.reddit.com/r/TiDB/" class="reddit" target="_blank">{{ partial "svgs/icon-reddit.svg" (dict "width" 20 "height" 20 ) }}</a></li>
+          <li><a href="https://groups.google.com/forum/#!forum/tidb-user" class="google-plus" target="_blank">{{ partial "svgs/icon-google-plus.svg" (dict "width" 20 "height" 20 ) }}</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/tidb" class="stack-overflow" target="_blank">{{ partial "svgs/icon-stack-overflow.svg" (dict "width" 20 "height" 20 ) }}</a></li>
+          <li id="wechat"><a class="weichat" href="#">{{ partial "svgs/icon-weixin.svg" (dict "width" 20 "height" 20 ) }} {{ partial "qr-code.html" . }}</a></li>
+        </ul>
+      </div>
+      <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
+    </div>
+    <div class="container">
+      <p class="copyright">&copy; 2017 北京平凯星辰科技发展有限公司</p>
+      <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">English</a>
+    </div>
+  </div>
 </nav>
 <!-- @end nav -->
