--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
     <div class="nav-wrapper">
       <div class="navigations">
         <ul>
-          <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs/overview">Docs</a></li>
+          <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs/overview/#tidb-introduction">Docs</a></li>
           <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog">Blog</a></li>
           <li {{ if eq $nav_active "weekly"}}class="sel"{{end}}><a href="/weekly">Weekly</a></li>
           <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about">About</a></li>
