chore: hide some links

--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -26,7 +26,7 @@
           <li><a href="https://pingcap.com/blog-cn/">博客</a></li>
           <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
           <li><a href="https://zhuanlan.zhihu.com/newsql" target="_blank">知乎专栏</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">技术分享</a></li>
+          <!-- <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">技术分享</a></li> -->
         </ul>
       </div>
       <div class="flex-list">
@@ -34,8 +34,8 @@
         <ul>
           <li><a href="https://pingcap.com/about-cn/">关于</a></li>
           <li><a href="https://pingcap.com/recruit-cn/">招贤纳士</a></li>
-          <li>用户案例</li>
-          <li>新闻媒体</li>
+          <!-- <li>用户案例</li> -->
+          <!-- <li>新闻媒体</li> -->
         </ul>
       </div>
     </div>
