--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -25,7 +25,7 @@
         <ul>
           <li><a href="https://pingcap.com/blog/">Blog</a></li>
           <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">Tech Talks</a></li>
+          <!-- <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">Tech Talks</a></li> -->
         </ul>
       </div>
       <div class="flex-list">
@@ -33,8 +33,8 @@
         <ul>
           <li><a href="https://pingcap.com/about/">About</a></li>
           <li><a href="https://pingcap.com/recruit/">Careers</a></li>
-          <li>Use Cases</li>
-          <li>Press</li>
+          <!-- <li>Use Cases</li> -->
+          <!-- <li>Press</li> -->
         </ul>
       </div>
     </div>
