--- a/src/less/header.less
+++ b/src/less/header.less
@@ -271,7 +271,7 @@ nav.mobile-sidebar {
 
     .container {
       display: block;
-      padding: 1.5rem 0.75rem 0.75rem;
+      padding: 1.2rem 0.75rem;
 
       .copyright {
         padding: 0;
