chore: add linkedIn links in footer

--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -43,11 +43,12 @@
       <div class="flex-list">
         <h4 class="list-title"><strong>联系我们</strong></h4>
         <ul>
-          <li><a href="https://twitter.com/PingCAP" target="_blank">Twitter</a></li>
-          <li><a href="https://www.reddit.com/r/TiDB/" target="_blank">Reddit</a></li>
-          <li><a href="https://groups.google.com/forum/#!forum/tidb-user" target="_blank">Google Group</a></li>
-          <li><a href="https://stackoverflow.com/questions/tagged/tidb" target="_blank">Stack Overflow</a></li>
-          <li id="wechat">微信公众号 {{ partial "qr-code.html" . }}</li>
+          <li><a href="https://twitter.com/PingCAP" class="twitter"  target="_blank">{{ partial "svgs/icon-twitter.svg" (dict "width" 18 "height" 18 ) }} Twitter</a></li>
+          <li><a href="https://www.linkedin.com/company/pingcap/" class="linkedin" target="_blank">{{ partial "svgs/icon-linked-in.svg" (dict "width" 18 "height" 18 ) }} LinkedIn</a></li>
+          <li><a href="https://www.reddit.com/r/TiDB/" class="reddit" target="_blank">{{ partial "svgs/icon-reddit.svg" (dict "width" 18 "height" 18 ) }} Reddit</a></li>
+          <li><a href="https://groups.google.com/forum/#!forum/tidb-user" class="google-plus" target="_blank">{{ partial "svgs/icon-google-plus.svg" (dict "width" 18 "height" 18 ) }} Google Group</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/tidb" class="stack-overflow" target="_blank">{{ partial "svgs/icon-stack-overflow.svg" (dict "width" 18 "height" 18 ) }} Stack Overflow</a></li>
+          <li><a class="wechat" id="wechat" href="javascript:void(0)">{{ partial "svgs/icon-weixin.svg" (dict "width" 18 "height" 18 ) }} 微信公众号 {{ partial "qr-code.html" . }}</a></li>
         </ul>
       </div>
       <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
