--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,7 +1,7 @@
 /* footer module */
 @import './base.less';
 //height
-@footer_height_pc: 330px;
+@footer_height_pc: 350px;
 @input_height: 32px;
 @pingcap_logo_height: 1.8rem;
 
@@ -135,6 +135,42 @@
         a {
           color: inherit;
           font-weight: inherit;
+
+          svg {
+            fill: #fff;
+            margin-right: 4px;
+          }
+
+          &.twitter {
+            &:hover svg {
+              fill: #00baf0;
+            }
+          }
+          &.linkedin {
+            &:hover svg {
+              fill: #0079b2;
+            }
+          }
+          &.reddit {
+            &:hover svg {
+              fill: #dd0008;
+            }
+          }
+          &.google-plus {
+            &:hover svg {
+              fill: #c43c2c;
+            }
+          }
+          &.stack-overflow {
+            &:hover svg {
+              fill: #f48024;
+            }
+          }
+          &.wechat {
+            &:hover svg {
+              fill: #1aad19;
+            }
+          }
         }
       }
     }
@@ -155,6 +191,14 @@
     width: 25%;
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     padding-left: 40px;
+
+    ul {
+      li {
+        a {
+          display: flex;
+        }
+      }
+    }
   }
 }
 
