--- a/src/less/header.less
+++ b/src/less/header.less
@@ -208,7 +208,7 @@ nav.mobile-sidebar {
         li {
           display: inline-block;
           position: relative;
-          width: (100% / 4);
+          width: (100% / 5);
           height: 24px;
           margin: 0;
           padding: 0;
@@ -237,25 +237,29 @@ nav.mobile-sidebar {
                 fill: #00baf0;
               }
             }
+            &.linkedin {
+              &:hover svg {
+                fill: #0079b2;
+              }
+            }
             &.reddit {
-              &:hover {
-                color: #dd0008;
+              &:hover svg {
+                fill: #dd0008;
               }
             }
             &.google-plus {
-              &:hover {
-                color: #c43c2c;
+              &:hover svg {
+                fill: #c43c2c;
               }
             }
             &.stack-overflow {
-              &:hover {
-                color: #f48024;
+              &:hover svg {
+                fill: #f48024;
               }
             }
-
             &.wechat {
-              &:hover {
-                color: #f48024;
+              &:hover svg {
+                fill: #1aad19;
               }
             }
           }
@@ -264,7 +268,7 @@ nav.mobile-sidebar {
 
       .social-cn {
         li {
-          width: (100% / 5);
+          width: (100% / 6);
         }
       }
     }
