--- a/layouts/partials/mobile-sidebar.html
+++ b/layouts/partials/mobile-sidebar.html
@@ -23,10 +23,11 @@
       <div class="flex-list">
         <h4 class="list-title"><strong>Contact</strong></h4>
         <ul class="social ul-base">
-          <li><a href="https://twitter.com/PingCAP" class="twitter" target="_blank">{{ partial "svgs/icon-twitter.svg" (dict "width" 20 "height" 20 ) }}</a></li>
-          <li><a href="https://www.reddit.com/r/TiDB/" class="reddit" target="_blank">{{ partial "svgs/icon-reddit.svg" (dict "width" 20 "height" 20 ) }}</a></li>
-          <li><a href="https://groups.google.com/forum/#!forum/tidb-user" class="google-plus" target="_blank">{{ partial "svgs/icon-google-plus.svg" (dict "width" 20 "height" 20 ) }}</a></li>
-          <li><a href="https://stackoverflow.com/questions/tagged/tidb" class="stack-overflow" target="_blank">{{ partial "svgs/icon-stack-overflow.svg" (dict "width" 20 "height" 20 ) }}</a></li>
+          <li><a href="https://twitter.com/PingCAP" class="twitter" target="_blank">{{ partial "svgs/icon-twitter.svg" (dict "width" 18 "height" 18 ) }}</a></li>
+          <li><a href="https://www.linkedin.com/company/pingcap/" class="linkedin" target="_blank">{{ partial "svgs/icon-linked-in.svg" (dict "width" 18 "height" 18 ) }}</a></li>
+          <li><a href="https://www.reddit.com/r/TiDB/" class="reddit" target="_blank">{{ partial "svgs/icon-reddit.svg" (dict "width" 18 "height" 18 ) }}</a></li>
+          <li><a href="https://groups.google.com/forum/#!forum/tidb-user" class="google-plus" target="_blank">{{ partial "svgs/icon-google-plus.svg" (dict "width" 18 "height" 18 ) }}</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/tidb" class="stack-overflow" target="_blank">{{ partial "svgs/icon-stack-overflow.svg" (dict "width" 18 "height" 18 ) }}</a></li>
         </ul>
       </div>
       <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
