chore: fix qr_code

--- a/layouts/partials/qr-code.html
+++ b/layouts/partials/qr-code.html
@@ -1,4 +1,4 @@
-<div id="js_qr_code" class="qr_code_outer f-hide">
+<div class="qr_code_outer f-hide">
     <div class="qr_code_inner">
         <div class="qr_code">
             <img id="js_qr_code_img" class="qr_code_img" src="https://download.pingcap.com/images/qrcode-min.jpg">
