--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -48,7 +48,7 @@
           <li><a href="https://www.reddit.com/r/TiDB/" class="reddit" target="_blank">{{ partial "svgs/icon-reddit.svg" (dict "width" 18 "height" 18 ) }} Reddit</a></li>
           <li><a href="https://groups.google.com/forum/#!forum/tidb-user" class="google-plus" target="_blank">{{ partial "svgs/icon-google-plus.svg" (dict "width" 18 "height" 18 ) }} Google Group</a></li>
           <li><a href="https://stackoverflow.com/questions/tagged/tidb" class="stack-overflow" target="_blank">{{ partial "svgs/icon-stack-overflow.svg" (dict "width" 18 "height" 18 ) }} Stack Overflow</a></li>
-          <li><a class="wechat" id="wechat" href="javascript:void(0)">{{ partial "svgs/icon-weixin.svg" (dict "width" 18 "height" 18 ) }} 微信公众号 {{ partial "qr-code.html" . }}</a></li>
+          <li id="wechat"><a class="wechat" href="javascript:void(0)">{{ partial "svgs/icon-weixin.svg" (dict "width" 18 "height" 18 ) }} 微信公众号</a> {{ partial "qr-code.html" . }}</li>
         </ul>
       </div>
       <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
