--- a/layouts/partials/mobile-sidebar-cn.html
+++ b/layouts/partials/mobile-sidebar-cn.html
@@ -28,7 +28,7 @@
           <li><a href="https://www.reddit.com/r/TiDB/" class="reddit" target="_blank">{{ partial "svgs/icon-reddit.svg" (dict "width" 18 "height" 18 ) }}</a></li>
           <li><a href="https://groups.google.com/forum/#!forum/tidb-user" class="google-plus" target="_blank">{{ partial "svgs/icon-google-plus.svg" (dict "width" 18 "height" 18 ) }}</a></li>
           <li><a href="https://stackoverflow.com/questions/tagged/tidb" class="stack-overflow" target="_blank">{{ partial "svgs/icon-stack-overflow.svg" (dict "width" 18 "height" 18 ) }}</a></li>
-          <li><a class="wechat" id="wechat" href="javascript:void(0)">{{ partial "svgs/icon-weixin.svg" (dict "width" 18 "height" 18 ) }} {{ partial "qr-code.html" . }}</a></li>
+          <li id="wechat-mobile"><a class="wechat" href="javascript:void(0)">{{ partial "svgs/icon-weixin.svg" (dict "width" 18 "height" 18 ) }}</a>{{ partial "qr-code.html" . }}</li>
         </ul>
       </div>
       <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
