polish: minor fix in search box

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -102,14 +102,14 @@
 
   #search-input {
     position: relative;
-    width: 100%;
+    width: @search_box_width;
     height: 100%;
-    padding: 0.5rem 0.5rem 0.5rem 2rem;
+    padding: 0.3rem 0.5rem 0.3rem 2rem;
     border: none;
     outline: none;
     background-color: transparent;
     color: @gray_white;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
   }
 }
 
