fix: responsive search box in small mobile device

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -390,16 +390,26 @@ nav.mobile-sidebar {
     .nav-brand {
       height: 24px;
     }
-    .search-wrapper {
-      width: 11rem;
+    .global-search {
+      .search-wrapper {
+        width: 11rem;
+      }
+      #search-input {
+        width: 11rem;
+      }
     }
   }
 }
 
 @media only screen and (max-width: 320px) {
   .header {
-    .search-wrapper {
-      width: 9rem;
+    .global-search {
+      .search-wrapper {
+        width: 9rem;
+      }
+      #search-input {
+        width: 9rem;
+      }
     }
   }
 }
