--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -21,7 +21,11 @@
           </li>
           <li class="meta-item">
             {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
-            {{ range .Params.author }} {{ . }}  {{ end }}
+            {{ if .Params.author }}
+              {{ range .Params.author }} {{ . }}  {{ end }}
+            {{ else }}
+              PingCAP
+            {{ end }}
           </li>
         </ul>
         <div class="blog-text">{{ .Content }}</div>
