polish: a11y for tags with blank character in blog

--- a/layouts/partials/navs/tags-nav.html
+++ b/layouts/partials/navs/tags-nav.html
@@ -25,8 +25,8 @@
 
           {{ if (gt $count  1) }}
             <!-- hide class for li, if less then 2 -->
-            <a href="#{{ $name }}" class="tag {{ if in $.global.Params.tags $name }}sel{{end}}" data-tag="{{$name}}">
-              {{ $name }} ({{ $count }})
+            <a href="#{{ replace $name " " "-"}}" class="tag {{ if in $.global.Params.tags $name }}sel{{end}}" data-tag="{{ replace $name " " "-"}}">
+              {{ replace $name " " "-"}} ({{ $count }})
             </a>
           {{ end }}
       {{end}}
