feat: change download link url in header and mobile nav sidebar

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,11 +10,7 @@
           <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog">Blog</a></li>
           <li {{ if eq $nav_active "weekly"}}class="sel"{{end}}><a href="/weekly">Weekly</a></li>
           <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about">About</a></li>
-          <li>
-            <a class="link-download" href="https://github.com/pingcap/tidb/releases" target="_blank">Download
-              {{ partial "svgs/icon-external-link.svg" (dict "fill" "#fff" "width" 10 "height" 10 ) }}
-            </a>
-          </li>
+          <li><a class="link-download" href="/docs/QUICKSTART/">Download</a></li>
         </ul>
       </div>
       <div class="global-search">
