feat: change the header style

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -74,6 +74,9 @@
 // width
 @max_width_pc: 1288px;
 
+// height
+@primary_button_height: 1.8rem;
+
 // box
 @box_size: border-box;
 
@@ -356,9 +359,9 @@ h4 {
   }
 }
 
-/* 小屏幕（平板，大于等于 768px） */
+/* 小屏幕（平板，大于等于 780px） */
 
-@media (max-width: 768px) {
+@media (max-width: 780px) {
   html,
   body {
     font-size: 18px;
