--- a/src/less/index.less
+++ b/src/less/index.less
@@ -6,7 +6,7 @@
 @logo_width: 10.5rem;
 // height
 @logo_height: 4rem;
-@button_height: 1.8rem;
+
 // margin
 @advantage_row_margin: 4rem;
 // color
@@ -72,8 +72,8 @@
     justify-content: space-between;
 
     .btn {
-      height: @button_height;
-      line-height: @button_height;
+      height: @primary_button_height;
+      line-height: @primary_button_height;
       width: 7.2rem;
       padding: 0 1rem;
       .rounded-corners(0.9rem);
@@ -97,7 +97,7 @@
       padding-left: 2.25rem;
       border: 1px solid @white;
       background: transparent;
-      line-height: calc(@button_height~' - 2px');
+      line-height: calc(@primary_button_height~' - 2px');
       color: @white;
 
       &:hover {
