chore: refactor directory structure of layouts/partials

--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -29,19 +29,19 @@
   {{ $data_i18_cn := $.Scratch.Get "data_i18_cn" }}
 
   {{ if $data_i18_cn }}
-    {{ partial "header-cn" . }}
-    {{ partial "mobile-sidebar-cn" . }}
+    {{ partial "layout/header-cn" . }}
+    {{ partial "layout/mobile-sidebar-cn" . }}
   {{ else }}
-    {{ partial "header" . }}
-    {{ partial "mobile-sidebar" . }}
+    {{ partial "layout/header" . }}
+    {{ partial "layout/mobile-sidebar" . }}
   {{ end }}
 
   {{ block "main" . }}{{ end }}
 
   {{ if $data_i18_cn }}
-    {{ partial "footer-cn" . }}
+    {{ partial "layout/footer-cn" . }}
   {{ else }}
-    {{ partial "footer" . }}
+    {{ partial "layout/footer" . }}
   {{ end }}
 
   <div class="overlay"></div>
