--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -7,7 +7,7 @@
 
 {{ define "main" }}
 <div class="doc" id='list_page'>
-  {{ partial "pre-loading/3-column-layout.html" }}
+  {{ partial "loading/3-column-layout.html" }}
   <div class="container content-container" style="display: none;">
     <div class="sidebar">
       <div class="sticky-sidebar">
@@ -29,7 +29,7 @@
 
     <div class="sidebar-page sticky-sidebar">
       {{ with .Site.GetPage "page" "docs/overview.md" }}
-        {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
+        {{ partial "archives/improve-doc.html" (dict "repo" "docs" "global" .) }}
       {{ end }}
       <p class="toc-title">What’s on this page</p>
       <div id="smarttoc_wrapper"></div>
