--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -9,7 +9,7 @@
 
 {{ define "main" }}
 <div class="doc">
-  {{ partial "pre-loading/3-column-layout.html" }}
+  {{ partial "loading/3-column-layout.html" }}
   <div class="container content-container" style="display: none;">
     <div class="sidebar">
       <div class="sticky-sidebar">
@@ -25,14 +25,14 @@
         {{ .Content }}
       </div>
       <div class="article-toc"></div>
-      {{ partial "git-info.html" (dict "repo" "docs" "global" .) }}
+      {{ partial "archives/git-info.html" (dict "repo" "docs" "global" .) }}
 
       {{ partial "archives/operate-links.html" (dict "global" .) }}
     </div>
 
     <div class="sidebar-page">
       <div class="sticky-sidebar">
-        {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
+        {{ partial "archives/improve-doc.html" (dict "repo" "docs" "global" .) }}
         <p class="toc-title">What’s on this page</p>
         <div id="smarttoc_wrapper"></div>
       </div>
