--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -18,7 +18,7 @@
 {{ end }}
 
 {{ define "main" }}
-{{ partial "pre-loading/landingpage.html" . }}
+{{ partial "loading/landingpage.html" . }}
 
 <div id="landingpage">
   <section class="landingpage-slogan-mask">
