--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -8,7 +8,7 @@
 
 {{ define "main" }}
 <div class="doc" id='list_page'>
-  {{ partial "pre-loading/3-column-layout.html" }}
+  {{ partial "loading/3-column-layout.html" }}
   <div class="container content-container" style="display: none;">
     <div class="sidebar">
       <div class="sticky-sidebar">
@@ -30,7 +30,7 @@
 
     <div class="sidebar-page sticky-sidebar">
       {{ with .Site.GetPage "page" "docs-cn/overview.md" }}
-        {{ partial "improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
+        {{ partial "archives/improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
       {{ end }}
       <p class="toc-title">本页导航</p>
       <div id="smarttoc_wrapper"></div>
