--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -9,7 +9,7 @@
 
 {{ define "main" }}
 <div class="doc">
-  {{ partial "pre-loading/3-column-layout.html" }}
+  {{ partial "loading/3-column-layout.html" }}
   <div class="container content-container" style="display: none;">
     <div class="sidebar">
       <div class="sticky-sidebar">
@@ -25,13 +25,13 @@
           {{ .Content }}
         </div>
         <div class="article-toc"></div>
-        {{ partial "git-info.html" (dict "repo" "docs-cn" "isCn" "true" "global" .) }}
+        {{ partial "archives/git-info.html" (dict "repo" "docs-cn" "isCn" "true" "global" .) }}
 
         {{ partial "archives/operate-links.html" (dict "global" . "isCn" "true") }}
     </div>
 
     <div class="sidebar-page sticky-sidebar">
-      {{ partial "improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
+      {{ partial "archives/improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
       <p class="toc-title">本页导航</p>
       <div id="smarttoc_wrapper"></div>
     </div>
