--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -15,7 +15,7 @@
 {{ end }}
 
 {{ define "main" }}
-{{ partial "pre-loading/landingpage.html" . }}
+{{ partial "loading/landingpage.html" . }}
 
 <div id="landingpage">
   <section class="landingpage-slogan-mask">
