--- a/layouts/recruit/list.html
+++ b/layouts/recruit/list.html
@@ -7,12 +7,12 @@
 
 {{ define "main" }}
 <div class="recruit">
-  {{ partial "pre-loading/2-column-layout.html" }}
+  {{ partial "loading/2-column-layout.html" }}
   <div class="container content-container" style="display: none;">
     {{ $posts := where (where .Site.Pages "Section" "recruit") ".Params.title" "!=" nil  }}
     {{ partial "navs/tags-nav.html" (dict "title" "Job Categories" "posts" $posts "global" .) }}
 
-    {{ partial "list.html" (dict "posts" $posts "global" .) }}
+    {{ partial "archives/list.html" (dict "posts" $posts "global" .) }}
    </div>
 </div>
 {{ end }}
