feat: change navigator content in header

--- a/layouts/partials/layout/header.html
+++ b/layouts/partials/layout/header.html
@@ -6,12 +6,12 @@
     <div class="nav-wrapper">
       <div class="navigations">
         <ul>
-          <li {{ if eq $nav_active "cases"}}class="sel"{{end}}><a href="/cases">Customers</a></li>
+          <li {{ if eq $nav_active "customers"}}class="sel"{{end}}><a href="/customers">Customers</a></li>
           <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs/overview/#tidb-introduction">Docs</a></li>
           <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog">Blog</a></li>
           <li {{ if eq $nav_active "weekly"}}class="sel"{{end}}><a href="/weekly">Weekly</a></li>
           <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about">About</a></li>
-          <li><a class="link-download" href="/docs/QUICKSTART/">Download</a></li>
+          <li><a class="link-download" href="/docs/QUICKSTART/">Try TiDB</a></li>
         </ul>
       </div>
       <div class="global-search">
