--- a/layouts/partials/layout/mobile-sidebar-cn.html
+++ b/layouts/partials/layout/mobile-sidebar-cn.html
@@ -8,12 +8,12 @@
     </div>
   </div>
   <ul class="ul-base">
+    <li {{ if eq $nav_active "customers"}}class="sel"{{end}}><a href="/customers-cn">案例</a></li>
     <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs-cn/overview">文档</a></li>
     <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
-    <li {{ if eq $nav_active "cases"}}class="sel"{{end}}><a href="/cases-cn">案例</a></li>
     <!-- <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li> -->
     <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
-    <li><a class="link-download" href="/docs-cn/QUICKSTART/">下载</a></li>
+    <li><a class="link-download" href="/docs-cn/QUICKSTART/">试用</a></li>
   </ul>
   <div class="nav-footer">
     <div class="contact-list-wrap">
