feat: add cta-footer for landing page

--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -31,7 +31,7 @@
           </p>
           <div class="buttons">
               <a href="/docs-cn" class="btn btn-primary"> 了解更多 </a>
-              <a href="http://github.com/pingcap" class="btn btn-github" target="_blank"> GitHub </a>
+              <a href="http://github.com/pingcap" class="btn btn-secondary" target="_blank"> GitHub </a>
           </div>
       </div>
   </section>
@@ -145,5 +145,6 @@
           </div>
       </div>
   </section>
+  {{ partial "layout/cta-footer-cn.html" . }}
 </div>
 {{ end }}
