--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -29,7 +29,7 @@
           </p>
           <div class="buttons">
               <a href="/docs" class="btn btn-primary f-fl"> GET STARTED </a>
-              <a href="http://github.com/pingcap" class="btn btn-github f-fl" target="_blank"> GitHub </a>
+              <a href="http://github.com/pingcap" class="btn btn-secondary f-fl" target="_blank"> GitHub </a>
           </div>
       </div>
   </section>
@@ -137,5 +137,6 @@
           </div>
       </div>
   </section>
+  {{ partial "layout/cta-footer.html" . }}
 </div>
 {{ end }}
