feat: add Customers and News entry in footer and polish footer style

--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -34,8 +34,8 @@
         <ul>
           <li><a href="https://pingcap.com/about-cn/">关于</a></li>
           <li><a href="https://pingcap.com/recruit-cn/">招贤纳士</a></li>
-          <!-- <li>用户案例</li> -->
-          <!-- <li>新闻媒体</li> -->
+          <li><a href="https://pingcap.com/customers-cn/">用户案例</a></li>
+          <li><a href="https://pingcap.com/news-cn/">新闻媒体</a></li>
         </ul>
       </div>
     </div>
