--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -41,6 +41,7 @@
   .btn {
     width: @btn_subscribe_width;
     height: @input_height;
+    line-height: @input_height;
     padding: 0 5px;
     .rounded-corners(0);
     border: 1px solid fade(@white, 0%);
@@ -108,6 +109,7 @@
 .footer {
   width: 100%;
   padding: 1.5rem 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
   background-color: @bg_black_with_alpha90;
   color: @white;
 
@@ -189,7 +191,7 @@
 
   .contact-list-wrap {
     width: 25%;
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.3);
     padding-left: 40px;
 
     ul {
@@ -225,11 +227,6 @@
 
     .contact-list-wrap {
       display: none;
-      // border-left: none;
-      // padding-left: 0;
-      // .subscribe {
-      //   margin: 20px auto;
-      // }
     }
 
     .btn-lang {
