--- a/layouts/partials/layout/footer.html
+++ b/layouts/partials/layout/footer.html
@@ -33,7 +33,8 @@
         <ul>
           <li><a href="https://pingcap.com/about/">About</a></li>
           <li><a href="https://pingcap.com/recruit/">Careers</a></li>
-          <!-- <li>Use Cases</li> -->
+          <li><a href="https://pingcap.com/customers/">Customers</a></li>
+          <li><a href="https://pingcap.com/news/">News</a></li>
           <!-- <li>Press</li> -->
         </ul>
       </div>
