fix: fix sidebar scroll bug

--- a/src/less/sidebar.less
+++ b/src/less/sidebar.less
@@ -181,6 +181,7 @@
     top: @header_height;
     flex: 1;
     align-self: flex-start;
+    max-height: calc(~'100vh - @{header_height}');
     padding: 20px 0;
     overflow: auto;
   }
