chore: minor fix in sidebar

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -204,7 +204,8 @@
     position: relative !important;
     left: initial !important;
     max-width: @page_sidebar_width !important;
-    padding: 0 0 10px;
+    max-height: calc(~'100vh - 146px');
+    padding: 0;
     border: none;
     border-color: transparent;
     border-left: 1px solid rgba(158, 158, 158, 0.22);
