polish: polish smart-toc style

--- a/src/less/sidebar.less
+++ b/src/less/sidebar.less
@@ -9,6 +9,9 @@
 // width
 @sidebar_width: 11.5rem;
 
+// padding
+@sidebar_padding: 20px;
+
 // height
 @nav_height: 2rem;
 @header_height: calc(~'1rem + @{nav_height}');
@@ -181,8 +184,15 @@
     top: @header_height;
     flex: 1;
     align-self: flex-start;
-    max-height: calc(~'100vh - @{header_height}');
-    padding: 20px 0;
-    overflow: auto;
+    // max-height: calc(~'100vh - @{header_height}');
+    padding: @sidebar_padding 0;
+    // overflow: auto;
+  }
+
+  .sidebar {
+    .sticky-sidebar {
+      max-height: calc(~'100vh - @{header_height}');
+      overflow: auto;
+    }
   }
 }
