--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -8,11 +8,17 @@
 // width
 @page_sidebar_width: 12.5rem;
 
+// line-height
+@smarttoc_title_line_height: 20px;
+
 // color
 @text_color: #3e3e3e;
 @title_color: #142848;
 @code_color: #c7254e;
 @code_bg_color: #f9f2f4;
+
+// margin
+@smarttoc_line_margin: 10px;
 
 // padding
 @pre_padding: 9.5px;
@@ -55,9 +61,10 @@
     flex: 0 0 @page_sidebar_width;
     .improve-doc,
     .toc-title {
-      margin-bottom: 12px;
+      margin-bottom: @smarttoc_line_margin;
       color: @title_color;
       font-size: 14px;
+      line-height: @smarttoc_title_line_height;
 
       svg {
         margin-right: 5px;
@@ -68,7 +75,7 @@
       display: flex;
       align-items: center;
       text-decoration: underline;
-      margin-bottom: 22px;
+      margin-bottom: calc(~'@{smarttoc_line_margin} * 2');
     }
   }
 
@@ -204,7 +211,7 @@
     position: relative !important;
     left: initial !important;
     max-width: @page_sidebar_width !important;
-    max-height: calc(~'100vh - 160px');
+    max-height: calc(~'100vh - 3rem') !important;
     padding: 0;
     border: none;
     border-color: transparent;
@@ -217,8 +224,7 @@
     }
 
     ul {
-      padding-left: 0.4rem;
-      padding-right: 0;
+      padding: 0 0 0 1em !important;
     }
 
     a {
