fix: tiny fix in smart toc

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -211,7 +211,7 @@
     position: relative !important;
     left: initial !important;
     max-width: @page_sidebar_width !important;
-    max-height: calc(~'100vh - 3rem') !important;
+    max-height: 100vh !important;
     padding: 0;
     border: none;
     border-color: transparent;
